--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,17 +5,28 @@
         "titleBar.activeForeground": "#F4FCEF"
     },
     "cSpell.words": [
+        "altavoces",
+        "Altavoces",
         "ancho",
         "antigu",
         "compu",
         "Conector",
         "Fabricante",
+        "Grafica",
+        "impresora",
+        "Impresora",
         "memoria",
         "Método",
         "modelo",
+        "Oled",
+        "Pantalla",
         "precio",
         "puertos",
         "Salida",
+        "tableta",
+        "Tableta",
+        "teclado",
+        "Teclado",
         "tipo",
         "Unidad",
         "Validos"
