--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,26 +9,54 @@
         "Altavoces",
         "ancho",
         "antigu",
+        "Articulo",
+        "cambio",
+        "Cartucho",
+        "Clase",
+        "Clases",
+        "Componente",
+        "Componentes",
         "compu",
         "Conector",
+        "desde",
+        "elementos",
+        "Entda",
+        "entero",
+        "Fabrica",
         "Fabricante",
         "Grafica",
+        "Hijo",
+        "Impre",
+        "impresas",
         "impresora",
         "Impresora",
+        "impresoras",
+        "inyección",
+        "láser",
         "memoria",
         "Método",
         "modelo",
+        "número",
         "Oled",
+        "páginas",
         "Pantalla",
+        "perifericos",
         "precio",
         "puertos",
+        "raton",
         "Salida",
+        "sólo",
         "tableta",
         "Tableta",
+        "Tactil",
         "teclado",
         "Teclado",
         "tipo",
+        "tóner",
+        "último",
         "Unidad",
-        "Validos"
+        "Validos",
+        "valores",
+        "varios"
     ]
 }
